--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,6 @@
-OPENAP_API_KEY = ""
+OPENAI_API_KEY = "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"
 MONGODB_URL = "mongodb+srv://OmarAdamMostafa:Modric1986@cluster0.il775nd.mongodb.net/?retryWrites=true&w=majority"
+
+CLOUDINARY_CLOUD_NAME = "dw9y6laqy"
+CLOUDINARY_API_KEY = "195253262324237"
+CLOUDINARY_API_SECRET = "wHeYERjqvGTOGBL3qCsccIuD7DM"
