Fixing 'Incorrect' Issue #2

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY = "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"
+OPENAI_API_KEY = ""
 MONGODB_URL = "mongodb+srv://OmarAdamMostafa:Modric1986@cluster0.il775nd.mongodb.net/?retryWrites=true&w=majority"
 
 CLOUDINARY_CLOUD_NAME = "dw9y6laqy"
